exchange File - add Tests